tracker_error.log
macOS 26 (2602) or later required, have instead 16 (1602) !
macOS 26 (2602) or later required, have instead 16 (1602) !
macOS 26 (2602) or later required, have instead 16 (1602) !
macOS 26 (2602) or later required, have instead 16 (1602) !
Traceback (most recent call last):
  File "/Users/marcotiongson/Documents/MPV/src/main.py", line 113, in <module>
    from src.ui import TrackerUI
  File "/Users/marcotiongson/Documents/MPV/src/ui.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
macOS 26 (2602) or later required, have instead 16 (1602) !
macOS 26 (2602) or later required, have instead 16 (1602) !
----------------------------------------
Exception occurred during processing of request from ('127.0.0.1', 57676)
Traceback (most recent call last):
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/socketserver.py", line 316, in _handle_request_noblock
    self.process_request(request, client_address)
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/socketserver.py", line 347, in process_request
    self.finish_request(request, client_address)
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/socketserver.py", line 360, in finish_request
    self.RequestHandlerClass(request, client_address, self)
  File "/Users/marcotiongson/Documents/MPV/src/web_server.py", line 20, in __init__
    super().__init__(*args, directory=os.path.join(os.path.dirname(__file__), 'static'), **kwargs)
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/http/server.py", line 668, in __init__
    super().__init__(*args, **kwargs)
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/socketserver.py", line 747, in __init__
    self.handle()
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/http/server.py", line 433, in handle
    self.handle_one_request()
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/http/server.py", line 421, in handle_one_request
    method()
  File "/Users/marcotiongson/Documents/MPV/src/web_server.py", line 104, in do_GET
    self.wfile.write(json.dumps(response).encode('utf-8'))
  File "/Users/marcotiongson/.pyenv/versions/3.10.13/lib/python3.10/socketserver.py", line 826, in write
    self._sock.sendall(b)
BrokenPipeError: [Errno 32] Broken pipe
----------------------------------------
